--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style>
         html {
             font-family: 'Roboto', sans-serif;
+            background-color: black;
         }
     </style>
 </head>
